# pygments-lexer-ursa

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  ursa.py
pygments_lexer_ursa/: lexer.py
