[project]
name = "pygments-lexer-ursa"
version = "1.0.2"
description = "Pygments lexer for Ursa"
license = {text = "MIT"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/ursalang/pygments-lexer-ursa"}
requires-python = ">= 3.8"
dependencies = [
    "pygments",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.entry-points."pygments.lexers"]
ursa = "pygments_lexer_ursa.lexer:CustomLexer"
